----------------------------------------------------------------------
r6151:  autrijus | 2004-07-16T16:19:48.000177Z

* 0.00_02.
* Correctly renders nested tables.
----------------------------------------------------------------------
r6144:  autrijus | 2004-07-16T03:33:14.557170Z

* changes, manifest, etc.
----------------------------------------------------------------------
r6143:  autrijus | 2004-07-16T03:29:31.626167Z

* This be 0.00_01, first CPAN (pre)release.
----------------------------------------------------------------------
r6126:  autrijus | 2004-07-15T19:10:58.897522Z

* first checking of PDF::FromHTML.
----------------------------------------------------------------------