@@ -14,9 +14,9 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 35e1e5bd893e5b6f194448e353db9de6507ec4f1 Changes
+SHA1 adc5f390f1345ea9760457289b0f32d5c55a9e5f Changes
 SHA1 8f973a63820239079ca690b529866448c58cdb85 MANIFEST
-SHA1 c3c6a9459d2f8ff9ebaeb1c6939cf4c87aa5d625 META.yml
+SHA1 6b6d4b1f0f55448e6cef3f9b3b34dc6fee5a5160 META.yml
 SHA1 54bffac4b60a28f70bceae6fcce7cc72c3a3ed55 Makefile.PL
 SHA1 cbb9037114e35d57ddf1b8399c5f2d74225ae1d3 README
 SHA1 b26ac27e5a57677aa210c0e908b28ff3ba28f03b inc/Module/Install.pm
@@ -28,14 +28,14 @@ SHA1 207dfa13341a374fc78325fbeb99bc36659aef2d inc/Module/Install/Metadata.pm
 SHA1 bfc36deb38cf94243679dfa71f6e8c4e2000d20a inc/Module/Install/Scripts.pm
 SHA1 aff9341a15c04faec47089851e43d9d4061337e7 inc/Module/Install/Win32.pm
 SHA1 8e0d347ca21bc18b380d9d1aa5910b8d078a76b7 inc/Module/Install/WriteAll.pm
-SHA1 22fff545b77c2a8e786278f51916803b0b7a69d1 lib/PDF/FromHTML.pm
-SHA1 6c85297e7f6f8300d8b29e9daa7de4cd4ddf6345 lib/PDF/FromHTML/Twig.pm
-SHA1 ecbb1fe02e535043ef462d8990a0bec032076469 script/html2pdf.pl
+SHA1 7d847bf32dedcab9f062920febafca14fd961044 lib/PDF/FromHTML.pm
+SHA1 24744256f313221ba4ef2209301bf7edbeff4ba7 lib/PDF/FromHTML/Twig.pm
+SHA1 40eb37d93b07228b29f9d46cf0638b2a83c7efcd script/html2pdf.pl
 SHA1 0c800af2d865899d299a4e169c1a2070c64c4862 t/0-signature.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.3 (FreeBSD)
 
-iD8DBQFA+AAvtLPdNzw1AaARApxaAJ44RfTVCpt/p5Ndj9M9Rzpyj6W9agCgvIil
-AHAG9AOi7Rr6oXlo/NadNlc=
-=rzQ7
+iD8DBQFA+IZqtLPdNzw1AaARAnwXAKC2/GuXF7Pcryoz6mNBHfEV+627FgCgqgFk
+KmtG7aqATzo0QWKrRKoqEgc=
+=caKj
 -----END PGP SIGNATURE-----
