@@ -1,4 +1,13 @@
 ----------------------------------------------------------------------
+r6157:  autrijus | 2004-07-17T01:52:24.280506Z
+
+* This be 0.00_03.
+* <ol>, <ul>, <i> and <sup>.
+----------------------------------------------------------------------
+r6152:  autrijus | 2004-07-16T17:30:03.511354Z
+
+* fix td aligning.
+----------------------------------------------------------------------
 r6151:  autrijus | 2004-07-16T16:19:48.000177Z
 
 * 0.00_02.
